--- a/style.css
+++ b/style.css
@@ -14,3 +14,11 @@ table td {
 h2, p {
   color: #027549;
 }
+a {
+  color: rgb(128, 94, 0);
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
