--- a/style.css
+++ b/style.css
@@ -22,3 +22,11 @@ a {
 a:hover {
   text-decoration: underline;
 }
+ul {
+  list-style-type: square;
+  padding-left: 20px;
+}
+
+li {
+  margin-bottom: 10px;
+}
