--- a/style.css
+++ b/style.css
@@ -28,6 +28,31 @@ ul {
   list-style-type: square;
   padding-left: 20px;
 }
+.container {
+  display: flex;
+  align-items: flex-start;
+  gap: 20px;
+}
+
+.perfil img {
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
+
+.info {
+  max-width: 600px;
+}
+
+h1 {
+  color: #111;
+  margin-bottom: 10px;
+}
+
+p {
+  font-size: 16px;
+  margin-bottom: 8px;
+  color: #333;
+}
 
 li {
   margin-bottom: 10px;
